added social networks

--- a/html/profil.html
+++ b/html/profil.html
@@ -23,7 +23,7 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link" href="index.html">Home</a>
-                    <a class="mdl-navigation__link is-active" href="contact.html">Contact</a>
+                    <a class="mdl-navigation__link is-active" href="profil.html">Profil</a>
                 </nav>
             </div>
         </header>
@@ -32,8 +32,29 @@
         <div class="mdl-card mdl-shadow--2dp">
             <div class="mdl-card__supporting-text">
                 <h2>Me contacter</h2>
-                <span class="contact">
+                <span class="blocs">
                     Vous pouvez me contacter par mail à l'adresse suivante <strong>desjouisflorian@gmail.com</strong> ou bien par téléphone au <strong>07.77.04.06.04</strong>
+                </span>
+            </div>
+        </div>
+        <div class="mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__supporting-text"> 
+                <h2>Mes projets</h2>
+                <span class="blocs">
+                    Vous pouvez voir les différents projets que j'ai fais sur mon github <a href="https://github.com/FlorianDesjouis?tab=repositories"><img style="width: 50px; height: 50px;" src="../assets/img/github.png" alt="githubLogo_img"></a><br>
+                
+                    Vous pouvez consulter mon CV en cliquant ici  <a href="../assets/pdf/Desjouis_Florian_supinternet_2017-11-22_CV.pdf"><img style="width: 40px; height: 40px;" src="../assets/img/cv.png" alt="cv_img"></a>
+                </span>
+            </div>
+        </div>
+        <div class="mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__supporting-text">
+                <h2>Réseaux sociaux</h2>
+                <span class="blocs">
+                    Vous pouvez aussi me contacter sur mes réseaux sociaux
+                    <a href="https://www.linkedin.com/in/florian-desjouis-58716b112/"><img src="../assets/img/linkedin.png" style="width: 40px; height: 40px;" alt="linkedinLogo_img"></a>
+                    <a href="https://twitter.com/FlorianDesjouis"><img src="../assets/img/twitter.png" style="width: 40px; height: 40px;" alt="twitterLogo_img"></a>
+                    <a href="https://plus.google.com/u/0/117925187392631882602"><img src="../assets/img/googleplus.png" style="width: 40px; height: 40px;" alt="googleplusLogo_img"></a>
                 </span>
             </div>
         </div>
