--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link is-active" href="index.html">Home</a>
-                    <a class="mdl-navigation__link" href="contact.html">Contact</a>
+                    <a class="mdl-navigation__link" href="profil.html">Profil</a>
                 </nav>
             </div>
         </header>
@@ -34,7 +34,7 @@
 		<div class="mdl-card mdl-shadow--2dp">
 		  	<div class="mdl-card__supporting-text">
 		  		<h2>Présentation</h2>
-		  			<span class="presentation">
+		  			<span class="blocs">
 			    	Je m'appelle Florian Dejouis, j'ai 20 ans et je suis étudiant en developpement web. J'ai depuis toujours été passionné par ce qui touche au domaine de l'informatique et plus particulièrement au domaine du web. C'est donc normalement que j'ai décidé d'en faire mon futur metier. C'est pour cela qu'actuellement j'étudie à l'école Sup'Internet en 3eme année. J'ai choisi Sup'Internet car c'est une école où les corps metier du web sont tous représentés. Ainsi, je suis déjà apte à travailler en groupe sur différents projets, aussi, je connais les bases du marketing et du design ce qui me permet de cooperer avec une potentiel équipe composer de ceux-ci sans pour autant être perdu face aux questions qu'ils vont pouvoir aborder. 
 				</span>
 		  	</div>
@@ -95,16 +95,6 @@
 	                </div>
 				</div>
 		  	</div>
-		</div>
-		<div class="mdl-card mdl-shadow--2dp">
-			<div class="mdl-card__supporting-text">
-				<h2>Mes projets</h2>
-				<span class="projects">
-					Vous pouvez voir les différents projets que j'ai fais sur mon github <a href="https://github.com/FlorianDesjouis?tab=repositories"><img style="width: 50px; height: 50px;" src="../assets/img/github.png" alt="githubLogo_img"></a><br>
-				
-					Vous pouvez consulter mon CV en cliquant ici  <a href="../assets/pdf/Desjouis_Florian_supinternet_2017-11-22_CV.pdf"><img style="width: 40px; height: 40px;" src="../assets/img/cv.png" alt="cv_img"></a>
-				</span>
-			</div>
 		</div>
 	</main>
 </body>
