added some projects

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
 		  	<div class="mdl-card__supporting-text">
 		  		<h2>Présentation</h2>
 		  			<span class="blocs">
-			    	Je m'appelle Florian Dejouis, j'ai 20 ans et je suis étudiant en developpement web. J'ai depuis toujours été passionné par ce qui touche au domaine de l'informatique et plus particulièrement au domaine du web. C'est donc normalement que j'ai décidé d'en faire mon futur metier. C'est pour cela qu'actuellement j'étudie à l'école Sup'Internet en 3eme année. J'ai choisi Sup'Internet car c'est une école où les corps metier du web sont tous représentés. Ainsi, je suis déjà apte à travailler en groupe sur différents projets, aussi, je connais les bases du marketing et du design ce qui me permet de cooperer avec une potentiel équipe composer de ceux-ci sans pour autant être perdu face aux questions qu'ils vont pouvoir aborder. 
+			    	Je m'appelle Florian Desjouis, j'ai 20 ans et je suis étudiant en developpement web. J'ai depuis toujours été passionné par ce qui touche au domaine de l'informatique et plus particulièrement au domaine du web. C'est donc normalement que j'ai décidé d'en faire mon futur metier. C'est pour cela qu'actuellement j'étudie à l'école Sup'Internet en 3eme année. J'ai choisi Sup'Internet car c'est une école où les corps metier du web sont tous représentés. Ainsi, je suis déjà apte à travailler en groupe sur différents projets, aussi, je connais les bases du marketing et du design ce qui me permet de cooperer avec une potentiel équipe composer de ceux-ci sans pour autant être perdu face aux questions qu'ils vont pouvoir aborder. 
 				</span>
 		  	</div>
 		</div>
@@ -96,6 +96,30 @@
 				</div>
 		  	</div>
 		</div>
+		<div class="mdl-card mdl-shadow--2dp">
+			<div class="mdl-card__supporting-text">
+				<h2>Quelques projets</h2>
+					<div class="blocs">
+				  		<div>
+							Au cours de ma 1ère année à Sup'Internet j'ai été amené a constituer un projet en groupe imposé afin de comprendre et d'apprendre à travailler avec différentes fillières du web. Pour ce faire l'école nous a demandé de trouver une idée encore peut exploiter dans le domaine du web. Après plusieurs reflexion et de long brainstorming nous en sommes venu a l'idée de créer un site de déguisement en ligne, le seul gros concurrent étant déguisetoi.fr. 
+							Pour la partie développement j'ai fais équipe avec Jean-philippe Isungu et nous avons décidé de partir sur un site e-commerce sur du Symfony. Le choix de Symfony a été rapide à faire car pour l'époque c'était l'unique gros outil de développement que nous connaissions. De plus, son utlisation facilitait amplement notre développement grace aux différents Bundle existant sur Symfony. 
+							Ce projet s'est déroulé sur 6 mois, pour ma part j'ai essentiellement fait du front-end, avec un peu de back-end tout de même. 
+							Vous pouvez consulter librement ce projet sur mon Github à cette adresse https://github.com/FlorianDesjouis/ProjetTransversalCosplay
+						</div>
+						<hr>
+						<div>
+							En 2ème et encore plus maintenant en 3ème année nous avons des cours de mobiles, ce projet est un projet de cours fait en Java pour Android. Il s'agit d'une application mobile ressemblant un peu a Slack. Le but de se projet était d'apprendre à faire des applications en réseaux mais aussi à utliser Firebase. Il s'est déroulé sur 4 séances de 3h chacunes ou nous devions avancé sur différents TP donné par le professeur. Au début du cours suivant, celui-ci nous appelait afin de nous noté sur ce que nous avions a faire au cours de la semaine passé.
+							Vous pouvez consulter Slike sur mon Github à l'adresse suivante https://github.com/FlorianDesjouis/Slike
+						</div>
+						<hr>
+						<div>
+								Cette année nous approfondissons aussi nos connaissances sur la stack MEAN (MongoDB, ExpressJS, Angular, NodeJS) ainsi que sur VueJs. Nous avons donc à la fin de ce module créer un site en groupe de 2 en se servant de la Stack "MEVN". Nous avons donc décidé de créer une sorte de Blog avec 3 colonnes pour 3 différents type de news.
+								Sur ce site j'ai principalement développé la partie back-end en NodeJS, ExpressJS et MongoDB.
+								Ce projet est disponible sur mon Github à cette adresse https://github.com/FlorianDesjouis/BlogMEVN
+						</div>
+					</div>
+			</div>
+	  </div>
 	</main>
 </body>
 </html>
