--- a/html/profil.html
+++ b/html/profil.html
@@ -33,7 +33,8 @@
             <div class="mdl-card__supporting-text">
                 <h2>Me contacter</h2>
                 <span class="blocs">
-                    Vous pouvez me contacter par mail à l'adresse suivante <strong>desjouisflorian@gmail.com</strong> ou bien par téléphone au <strong>07.77.04.06.04</strong>
+                    Mail: <strong>desjouisflorian@gmail.com</strong><br>
+                    Télephone: <strong>07.77.04.06.04</strong>
                 </span>
             </div>
         </div>
@@ -41,9 +42,9 @@
             <div class="mdl-card__supporting-text"> 
                 <h2>Mes projets</h2>
                 <span class="blocs">
-                    Vous pouvez voir les différents projets que j'ai fais sur mon github <a href="https://github.com/FlorianDesjouis?tab=repositories"><img style="width: 50px; height: 50px;" src="../assets/img/github.png" alt="githubLogo_img"></a><br>
+                    Mon Github pour voir les différents projets auxquels j'ai participé: <a href="https://github.com/FlorianDesjouis?tab=repositories"><img style="width: 50px; height: 50px;" src="../assets/img/github.png" alt="githubLogo_img"></a><br>
                 
-                    Vous pouvez consulter mon CV en cliquant ici  <a href="../assets/pdf/Desjouis_Florian_supinternet_2017-11-22_CV.pdf"><img style="width: 40px; height: 40px;" src="../assets/img/cv.png" alt="cv_img"></a>
+                    Mon CV: <a href="../assets/pdf/Desjouis_Florian_supinternet_2017-11-22_CV.pdf"><img style="width: 40px; height: 40px;" src="../assets/img/cv.png" alt="cv_img"></a>
                 </span>
             </div>
         </div>
