removed underline link

--- a/html/index.html
+++ b/html/index.html
@@ -103,19 +103,19 @@
 						<div>
 								Cette année nous approfondissons aussi nos connaissances sur la stack MEAN (MongoDB, ExpressJS, Angular, NodeJS) ainsi que sur VueJs. Nous avons donc à la fin de ce module créer un site en groupe de 2 en se servant de la Stack "MEVN". Nous avons donc décidé de créer une sorte de Blog avec 3 colonnes pour 3 différents type de news.
 								Sur ce site j'ai principalement développé la partie back-end en NodeJS, ExpressJS et MongoDB.
-								Ce projet est disponible sur mon Github à ici <a href="https://github.com/FlorianDesjouis/BlogMEVN">World Of News</a>
+								Ce projet est disponible sur mon Github ici <a style="text-decoration: none;" href="https://github.com/FlorianDesjouis/BlogMEVN">World Of News</a>
 						</div>
 						<hr>
 						<div>
 							En 2ème et encore plus maintenant en 3ème année nous avons des cours de mobiles, ce projet est un projet de cours fait en Java pour Android. Il s'agit d'une application mobile ressemblant un peu a Slack. Le but de se projet était d'apprendre à faire des applications en réseaux mais aussi à utliser Firebase. Il s'est déroulé sur 4 séances de 3h chacunes ou nous devions avancé sur différents TP donné par le professeur. Au début du cours suivant, celui-ci nous appelait afin de nous noté sur ce que nous avions a faire au cours de la semaine passé.
-							Vous pouvez consulter Slike sur mon Github à l'adresse suivante <a href="https://github.com/FlorianDesjouis/Slike">Slike</a>
+							Vous pouvez consulter Slike sur mon Github ici <a style="text-decoration: none;" href="https://github.com/FlorianDesjouis/Slike">Slike</a>
 						</div>
 						<hr>
 				  		<div>
 							Au cours de ma 1ère année à Sup'Internet j'ai été amené a constituer un projet en groupe imposé afin de comprendre et d'apprendre à travailler avec différentes fillières du web. Pour ce faire l'école nous a demandé de trouver une idée encore peut exploiter dans le domaine du web. Après plusieurs reflexion et de long brainstorming nous en sommes venu a l'idée de créer un site de déguisement en ligne, le seul gros concurrent étant déguisetoi.fr. 
 							Pour la partie développement j'ai fais équipe avec Jean-philippe Isungu et nous avons décidé de partir sur un site e-commerce sur du Symfony. Le choix de Symfony a été rapide à faire car pour l'époque c'était l'unique gros outil de développement que nous connaissions. De plus, son utlisation facilitait amplement notre développement grace aux différents Bundle existant sur Symfony. 
 							Ce projet s'est déroulé sur 6 mois, pour ma part j'ai essentiellement fait du front-end, avec un peu de back-end tout de même. 
-							Vous pouvez consulter librement ce projet sur mon Github à cette adresse <a href="https://github.com/FlorianDesjouis/ProjetTransversalCosplay">Disguize</a>
+							Vous pouvez consulter librement ce projet sur mon Github ici <a style="text-decoration: none;" href="https://github.com/FlorianDesjouis/ProjetTransversalCosplay">Disguize</a>
 						</div>
 					</div>
 			</div>
