--- a/html/profil.html
+++ b/html/profil.html
@@ -42,7 +42,7 @@
             <div class="mdl-card__supporting-text"> 
                 <h2>Mes projets</h2>
                 <span class="blocs">
-                    Mon Github pour voir les différents projets auxquels j'ai participé: <a href="https://github.com/FlorianDesjouis?tab=repositories"><img style="width: 50px; height: 50px;" src="../assets/img/github.png" alt="githubLogo_img"></a><br>
+                    Mon Github pour voir les différents projets que j'ai fais et auxquels j'ai participé: <a href="https://github.com/FlorianDesjouis?tab=repositories"><img style="width: 50px; height: 50px;" src="../assets/img/github.png" alt="githubLogo_img"></a><br>
                 
                     Mon CV: <a href="../assets/pdf/Desjouis_Florian_supinternet_2017-11-22_CV.pdf"><img style="width: 40px; height: 40px;" src="../assets/img/cv.png" alt="cv_img"></a>
                 </span>
