--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,7 @@
 				<h2>Quelques projets</h2>
 					<div class="blocs">
 						<div>
-								Cette année nous approfondissons aussi nos connaissances sur la stack MEAN (MongoDB, ExpressJS, Angular, NodeJS) ainsi que sur VueJs. Nous avons donc à la fin de ce module créer un site en groupe de 2 en se servant de la Stack "MEVN". J'étais avec Alexis Bonnet pour ce projet. Nous avons donc décidé de créer une sorte de Blog avec 3 colonnes pour 3 différents type de news.<br><br>
+								Cette année nous approfondissons nos connaissances sur la stack MEAN (MongoDB, ExpressJS, Angular, NodeJS) ainsi que sur VueJs. Nous avons donc à la fin de ce module créer un site en groupe de 2 en se servant de la Stack "MEVN". J'étais avec Alexis Bonnet pour ce projet. Nous avons donc décidé de créer une sorte de Blog avec 3 colonnes pour 3 différents type de news.<br><br>
 								Sur ce site j'ai principalement développé la partie back-end en NodeJS, ExpressJS et MongoDB.<br><br>
 								Ce projet est disponible sur mon Github ici <a style="text-decoration: none;" href="https://github.com/FlorianDesjouis/BlogMEVN">World Of News</a>
 						</div>
